--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/AbstractPlay/front#readme",
   "private": true,
   "dependencies": {
+    "@abstractplay/renderer": "github:AbstractPlay/renderer",
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
@@ -23,15 +24,22 @@
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-react": "^0.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "core-js": "^2.6.5",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
+    "graphql": "^14.1.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "i18next": "^15.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
     "identity-obj-proxy": "3.0.0",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -43,6 +51,7 @@
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.2",
+    "react-i18next": "^10.1.2",
     "react-relay": "^2.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -52,7 +61,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql --watchman false"
   },
   "eslintConfig": {
     "extends": "react-app"
