--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+        "react-hooks"
+    ],
+    "rules": {
+        "react-hooks/rules-of-hooks": 2,
+        "react-hooks/exhaustive-deps": 1      
+    }
 }
