--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "bugs": {
     "url": "https://github.com/AbstractPlay/front/issues"
   },
-  "homepage": "https://github.com/AbstractPlay/front#readme",
   "private": true,
   "dependencies": {
     "@abstractplay/renderer": "github:AbstractPlay/renderer",
@@ -25,7 +24,6 @@
     "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
     "bootstrap": "^4.3.1",
-    "bootstrap-react": "^0.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "core-js": "^2.6.5",
     "css-loader": "1.0.0",
@@ -38,6 +36,7 @@
     "html-webpack-plugin": "4.0.0-alpha.2",
     "i18next": "^15.0.4",
     "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^2.0.1",
     "identity-obj-proxy": "3.0.0",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "0.5.0",
@@ -47,11 +46,12 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.2",
+    "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dev-utils": "^7.0.3",
-    "react-dom": "^16.8.2",
-    "react-i18next": "^10.1.2",
+    "react-dom": "^16.8.3",
+    "react-i18next": "^10.2.0",
     "react-relay": "^2.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -60,12 +60,14 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build-prod": "npm run relay && node scripts/build.js",
+    "build-dev": "npm run relay && node scripts/buildDev.js",
+    "full-prod": "npm run build-prod && npm run invalidate && npm run deploy",
+    "full-dev": "npm run build-dev && npm run invalidate && npm run deploy",
+    "deploy": "sls client deploy --no-confirm --no-config-change --no-policy-change --no-cors-change",
     "test": "node scripts/test.js",
-    "relay": "relay-compiler --src ./src --schema ./schema.graphql --watchman false"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql --watchman false",
+    "invalidate": "aws cloudfront create-invalidation --distribution-id E8GI8TIAOBUGE --paths /*"
   },
   "browserslist": [
     ">0.2%",
@@ -128,11 +130,6 @@
   },
   "devDependencies": {
     "babel-plugin-relay": "^2.0.0",
-    "relay-compiler": "^2.0.0",
-    "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.2",
-    "jest-resolve": "23.6.0",
-    "jest-watch-typeahead": "^0.2.1",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.1",
@@ -140,6 +137,14 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.2.0",
+    "jest": "23.6.0",
+    "jest-pnp-resolver": "1.0.2",
+    "jest-resolve": "23.6.0",
+    "jest-watch-typeahead": "^0.2.1",
+    "relay-compiler": "^2.0.0",
+    "serverless-finch": "^2.3.2",
+    "serverless-single-page-app-plugin": "^1.0.2",
     "terser-webpack-plugin": "1.2.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
