--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "farce": "^0.2.7",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
+    "found": "^0.3.20",
+    "found-relay": "^0.3.1",
     "fs-extra": "7.0.1",
     "graphql": "^14.1.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -53,10 +56,12 @@
     "react-dom": "^16.8.3",
     "react-i18next": "^10.2.0",
     "react-relay": "^2.0.0",
+    "reactn": "^1.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "url-loader": "1.1.2"
+    "url-loader": "1.1.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -142,6 +147,7 @@
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "lodash": "^4.17.11",
     "relay-compiler": "^2.0.0",
     "serverless-finch": "^2.3.2",
     "serverless-single-page-app-plugin": "^1.0.2",
