--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
-    "extends": "react-app",
+    "extends": ["eslint:recommended", "react-app"],
     "plugins": [
         "react-hooks"
     ],
     "rules": {
         "react-hooks/rules-of-hooks": 2,
-        "react-hooks/exhaustive-deps": 1      
+        "react-hooks/exhaustive-deps": 1,
+        "no-console": "warn"
     }
 }
