--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/renderer": "github:AbstractPlay/renderer",
+    "@abstractplay/renderer": "github:abstractplay/renderer",
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
@@ -32,12 +32,12 @@
     "farce": "^0.2.7",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "found": "^0.3.20",
+    "found": "^0.3.21",
     "found-relay": "^0.3.1",
     "fs-extra": "7.0.1",
     "graphql": "^14.1.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
-    "i18next": "^15.0.4",
+    "i18next": "^15.0.5",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
     "identity-obj-proxy": "3.0.0",
@@ -55,6 +55,7 @@
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.3",
     "react-i18next": "^10.2.0",
+    "react-markdown": "^4.0.6",
     "react-relay": "^2.0.0",
     "reactn": "^1.0.0",
     "resolve": "1.10.0",
@@ -142,7 +143,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.2.0",
+    "eslint-plugin-react-hooks": "^1.4.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
