--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-markdown": "^6.0.2",
     "react-refresh": "^0.8.3",
     "react-relay": "^11.0.2",
+    "react-router-dom": "^5.2.0",
     "reactn": "^2.2.7",
     "rehype-raw": "^5.1.0",
     "relay-runtime": "^11.0.2",
