Rewrite almost everything. Using react-router-dom instead of farce, and amplify for authorization. Now users can stay logged in. Refactor react classes as react functions. The game interface is now in it's own "page". Navigation works. Removed warning (except for console logging warnings).

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "aws-amplify": "^4.2.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -45,7 +46,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.5.2",
-    "farce": "^0.4.5",
     "file-loader": "6.1.1",
     "found": "^0.6.0",
     "found-relay": "^0.9.1",
@@ -79,7 +79,6 @@
     "react-refresh": "^0.8.3",
     "react-relay": "^11.0.2",
     "react-router-dom": "^5.2.0",
-    "reactn": "^2.2.7",
     "rehype-raw": "^5.1.0",
     "relay-runtime": "^11.0.2",
     "resolve": "1.18.1",
