--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abstractplay/gameslib": "file:../gameslib",
     "@abstractplay/renderer": "file:../renderer",
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
