--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "buffer": "^6.0.3",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-xhr-backend": "^3.2.2",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "extract": "i18next 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "i18next-parser": "^7.7.0"
   }
 }
