Checkpoint. Incorporating Bulma CSS framework and making other CSS adjustments as I go. Goal is to minimize custom CSS.

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.25",
     "buffer": "^6.0.3",
+    "bulma": "^0.9.4",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "i18next-parser": "^7.7.0",
+    "purgecss": "^5.0.0",
     "serverless-finch": "^4.0.0",
     "serverless-single-page-app-plugin": "^1.0.4"
   },
