Filled in some empty strings. Added a 'hide details' checkbox to the intro screen. Updated the footer

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
-org: wamelen
-app: apfront
+# org: wamelen
+# app: apfront
 # Welcome to Serverless!
 #
 # This file is the main config file for your service.
