--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+        "no-console": "off"
+    }
   },
   "browserslist": {
     "production": [
