--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apfront",
-  "version": "0.1.0",
+  "version": "1.0.0-beta",
   "description": "The official user client for Abstract Play",
   "repository": {
     "type": "git",
