--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "file:../gameslib/abstractplay-gameslib-0.6.5.tgz",
-    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-0.8.0.tgz",
+    "@abstractplay/gameslib": "file:../gameslib/abstractplay-gameslib-1.0.0-beta.tgz",
+    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-1.0.0-beta.tgz",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.25",
     "buffer": "^6.0.3",
@@ -55,15 +54,6 @@
     "invalidate": "aws cloudfront create-invalidation --profile AbstractPlayDev --distribution-id E2FD1T2JUN28HB --paths /*",
     "invalidate-prod": "aws cloudfront create-invalidation --profile AbstractPlayProd --distribution-id EZ7B67NVBQ903 --paths /*",
     "format": "prettier --write \"src/**/*.{js,jsx}\""
-},
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-        "no-console": "off"
-    }
   },
   "browserslist": {
     "production": [
