--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,6 @@
     "rules": {
         "react-hooks/rules-of-hooks": 2,
         "react-hooks/exhaustive-deps": 1,
-        "no-console": "warn"
+        "no-console": "off"
     }
 }
