--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "full-prod": "npm run build-prod && npm run invalidate-prod && npm run deploy-prod",
     "test": "react-scripts test",
     "extract": "i18next 'src/**/*.{js,jsx}'",
-    "deploy": "serverless client deploy",
-    "deploy-prod": "serverless client deploy --stage prod",
+    "deploy": "serverless client deploy --no-confirm",
+    "deploy-prod": "serverless client deploy --no-confirm --stage prod",
     "invalidate": "aws cloudfront create-invalidation --profile AbstractPlayDev --distribution-id E2FD1T2JUN28HB --paths /*",
     "invalidate-prod": "aws cloudfront create-invalidation --profile AbstractPlayProd --distribution-id EZ7B67NVBQ903 --paths /*",
     "format": "prettier --write \"src/**/*.{js,jsx}\""
