--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "github:abstractplay/gameslib#develop",
-    "@abstractplay/renderer": "github:abstractplay/renderer#develop",
+    "@abstractplay/gameslib": "latest",
+    "@abstractplay/renderer": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.25",
