Trying to locate token

--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -41,9 +41,8 @@ jobs:
     #     EOF
 
     - name: Create .npmrc
-      run: |
-        echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc \
-        echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
+      run: echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc
+    - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
     - name: Install NPM dependencies
       run: npm ci
