--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -52,8 +52,18 @@ jobs:
       env:
         CI: false
 
-    - name: Invalidate
-      run: aws cloudfront create-invalidation --distribution-id E2FD1T2JUN28HB --paths /*
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+        aws-region: us-east-1
+
+    - name: Create CloudFront invalidation
+      uses: josemando/aws-cloudfront-create-invalidation@v1
+      with:
+        distribution-id: E2FD1T2JUN28HB
+        paths: /*
 
     - name: Deploy
       run: serverless client deploy --no-confirm
