--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -53,11 +53,17 @@ jobs:
         CI: false
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: Fooji/create-aws-profile-action@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET }}
-        aws-region: us-east-1
+        profile: AbstractPlayDev
+        region: us-east-1
+        key: ${{ secrets.AWS_KEY}}
+        secret: ${{ secrets.AWS_SECRET}}
+    #   uses: aws-actions/configure-aws-credentials@v2
+    #   with:
+    #     aws-access-key-id: ${{ secrets.AWS_KEY }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+    #     aws-region: us-east-1
 
     - name: Create CloudFront invalidation
       uses: josemando/aws-cloudfront-create-invalidation@v1
