Squashed commit of the following:
commit 3d5e341c52ca84a9de2115cdb100e2642c1121ca
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 18:00:02 2023 -0600

    More tweaks

commit f9b2c401bbd9a724c284a964cb33087807118b09
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:49:34 2023 -0600

    Trying with a different action

commit 9e68f4f93e84cfa4726b80d387a734169d3a28e8
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:41:31 2023 -0600

    Fixing invalidation

commit 35abad37cb226ef4df2196a2065398cc07826f1a
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:21:17 2023 -0600

    Adding CI=false

commit c55f39bf436ba72635bcb085aef8fa6be3b9a18c
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:14:18 2023 -0600

    Trying to locate token

commit 608b03901fd57078d7f96fea2074523e02a524e5
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:11:15 2023 -0600

    Fixed npmrc

commit f2eb265e377bea33aa3834247ec65a29fd4234e6
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Wed May 10 17:06:54 2023 -0600

    Let's try a deployment!

commit 449c6c6331fd2abce241d79b6507a18e2e520f93
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Mon May 8 18:53:53 2023 -0600

    Stupid package-lock.json

commit 38baaddf3d7c3d6115fb20c5bebae8293d7136ea
Merge: 184a10f fa8af60
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Mon May 8 18:15:07 2023 -0600

    Merge branch 'main' into develop

commit fa8af60035bf6fedab8dfb42a7cff8e84cab25cb
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Mon May 8 18:15:01 2023 -0600

    Tweaked deploy script

commit c39eb0a717283bd3dfc3800e3e60d1d8225e0332
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Mon May 8 18:09:00 2023 -0600

    Added deploy workflow

commit 1916e8afbed524f210d2ad96b79b5ebc67a655a5
Author: Aaron Dalton <aaron@daltons.ca>
Date:   Mon May 8 16:09:10 2023 -0600

    Temporary fix for Volcano EOG holdup

commit 184a10f3dff19a42e0dd183fb8c754b7ae105347
Author: Aaron Dalton <aaron

--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -40,11 +40,39 @@ jobs:
     #     ${{ secrets.ENV }}
     #     EOF
 
-    - name: Install NPM dependencies
-      run: npm install
+    - name: Create .npmrc
+      run: echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc
+    - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
-    - name: Build and deploy
-      run: npm run full-dev
+    - name: Install NPM dependencies
+      run: npm ci
+
+    - name: Build
+      run: npm run build-dev
+      env:
+        CI: false
+
+    - name: Configure AWS credentials
+      uses: Fooji/create-aws-profile-action@v1
+      with:
+        profile: AbstractPlayDev
+        region: us-east-1
+        key: ${{ secrets.AWS_KEY}}
+        secret: ${{ secrets.AWS_SECRET}}
+    #   uses: aws-actions/configure-aws-credentials@v2
+    #   with:
+    #     aws-access-key-id: ${{ secrets.AWS_KEY }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+    #     aws-region: us-east-1
+
+    - name: Create CloudFront invalidation
+      uses: josemando/aws-cloudfront-create-invalidation@v1
+      with:
+        distribution-id: E2FD1T2JUN28HB
+        paths: /*
+
+    - name: Deploy
+      run: serverless client deploy --no-confirm
 
     # Optional (to use with serverless-finch serverless plugin)
     #- name: Deploy assets to S3
