--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -45,7 +45,7 @@ jobs:
     - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
     - name: Install NPM dependencies
-      run: npm ci
+      run: npm i
 
     - name: Build
       run: npm run build-dev
