--- a/.github/workflows/deploy-prod.js.yml
+++ b/.github/workflows/deploy-prod.js.yml
@@ -51,7 +51,7 @@ jobs:
       run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
 
     - name: Build
-      run: npm run build-dev
+      run: npm run build-prod
       env:
         CI: false
 
