--- a/.github/workflows/deploy-prod.js.yml
+++ b/.github/workflows/deploy-prod.js.yml
@@ -46,6 +46,9 @@ jobs:
       run: echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc
     - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
+    - name: Dump package.json
+      run: cat package.json
+
     - name: Install NPM dependencies
       run: npm i
 
