--- a/.github/workflows/deploy-prod.js.yml
+++ b/.github/workflows/deploy-prod.js.yml
@@ -46,14 +46,11 @@ jobs:
       run: echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc
     - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
-    - name: Dump package.json
-      run: cat package.json
-
-    - name: Dump gameslib package.json
-      run: cat node_modules/@abstractplay/gameslib/package.json
-
     - name: Install NPM dependencies
       run: npm i
+
+    - name: Dump package-lock.json
+      run: cat package-lock.json
 
     - name: Set CI version
       run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
