--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
     "react-markdown": "8.0.7",
     "react-router-dom": "6.10.0",
@@ -34,7 +35,6 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "cross-env": "7.0.3",
     "i18next-parser": "7.7.0",
     "prettier": "2.8.8",
