--- a/package.json
+++ b/package.json
@@ -15,31 +15,32 @@
   "dependencies": {
     "@abstractplay/gameslib": "latest",
     "@abstractplay/renderer": "latest",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^5.0.25",
-    "buffer": "^6.0.3",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/user-event": "13.5.0",
+    "aws-amplify": "5.0.25",
+    "buffer": "6.0.3",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.10.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-i18next": "12.2.0",
+    "react-markdown": "8.0.7",
+    "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
-    "react-time-ago": "^7.2.1",
-    "rehype-raw": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "react-time-ago": "7.2.1",
+    "rehype-raw": "6.1.1",
+    "web-vitals": "2.1.4"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "i18next-parser": "^7.7.0",
-    "prettier": "^2.8.8",
-    "purgecss": "^5.0.0",
-    "serverless-finch": "^4.0.0",
-    "serverless-single-page-app-plugin": "^1.0.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "cross-env": "7.0.3",
+    "i18next-parser": "7.7.0",
+    "prettier": "2.8.8",
+    "serverless-finch": "4.0.0",
+    "serverless-single-page-app-plugin": "1.0.4"
   },
   "scripts": {
     "start": "cross-env REACT_APP_REAL_MODE=local react-scripts start",
