Option to export PNG of board image. Styles are not visible to the exporter unless we go to great contortions to insert style tags into the SVG itself, and I really don't want to go there.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "13.5.0",
     "aws-amplify": "5.0.25",
     "buffer": "6.0.3",
+    "canvg": "^4.0.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
