--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -52,8 +52,11 @@ jobs:
     - name: Install NPM dependencies
       run: npm i
 
-    - name: Dump package-lock.json
-      run: cat package-lock.json
+    - name: renderer version installed
+      run: npm list @abstractplay/renderer
+
+    - name: gameslib version installed
+      run: npm list @abstractplay/gameslib
 
     - name: Set CI version
       run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
