--- a/.github/workflows/deploy-prod.js.yml
+++ b/.github/workflows/deploy-prod.js.yml
@@ -46,20 +46,14 @@ jobs:
       run: echo "@abstractplay:registry=https://npm.pkg.github.com/" > .npmrc
     - run: echo "//npm.pkg.github.com/:_authToken=${{secrets.PAT_READ_PACKAGES}}" >> .npmrc
 
+    - name: Kill package-lock.json
+      run: rm package-lock.json
+
     - name: Install NPM dependencies
       run: npm i
 
-    - name: Install latest renderer
-      run: npm install @abstractplay/renderer
-
-    - name: Install latest gameslib
-      run: npm install @abstractplay/gameslib
-
-    - name: Check renderer version installed
-      run: npm list @abstractplay/renderer
-
-    - name: Check gameslib version installed
-      run: npm list @abstractplay/gameslib
+    - name: Dump package-lock.json
+      run: cat package-lock.json
 
     - name: Set CI version
       run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
