--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -52,8 +52,14 @@ jobs:
     - name: Install NPM dependencies
       run: npm i
 
-    - name: renderer version installed
+    - name: Install latest renderer
+      run: npm install @abstractplay/renderer
+
+    - name: install
       run: npm list @abstractplay/renderer
+
+    - name: Install latest gameslib
+      run: npm install @abstractplay/gameslib
 
     - name: gameslib version installed
       run: npm list @abstractplay/gameslib
