--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
+    "react-joyride": "^2.5.5",
     "react-markdown": "8.0.7",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
