--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "plotly.js": "^2.27.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,7 @@
     "react-i18next": "12.2.0",
     "react-joyride": "^2.5.5",
     "react-markdown": "8.0.7",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-time-ago": "7.2.1",
