Disabling the damn rule in eslintrc!

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "rules": {
         "react-hooks/rules-of-hooks": 2,
         "react-hooks/exhaustive-deps": 1,
-        "no-console": "off"
+        "no-console": "off",
+        "no-constant-condition": "off"
     }
 }
