--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "i18next-parser": "7.7.0",
     "prettier": "2.8.8",
     "serverless-finch": "4.0.0",
-    "serverless-single-page-app-plugin": "1.0.4"
+    "serverless-single-page-app-plugin": "1.0.4",
+    "shx": "^0.3.4"
   },
   "scripts": {
     "start": "cross-env REACT_APP_REAL_MODE=local react-scripts start",
-    "build-dev": "cross-env REACT_APP_REAL_MODE=development react-scripts build",
-    "build-prod": "cross-env REACT_APP_REAL_MODE=production react-scripts build",
+    "build-dev": "cross-env REACT_APP_REAL_MODE=development react-scripts build && shx cp src/robots/robots.txt.dev build/robots.txt",
+    "build-prod": "cross-env REACT_APP_REAL_MODE=production react-scripts build && shx cp src/robots/robots.txt.prod build/robots.txt",
     "full-dev": "npm run build-dev && npm run invalidate && npm run deploy",
     "full-prod": "npm run build-prod && npm run invalidate-prod && npm run deploy-prod",
     "test": "react-scripts test",
