--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "serverless-finch": "4.0.0",
     "serverless-single-page-app-plugin": "1.0.4",
     "shx": "^0.3.4",
-    "sitemap": "^7.1.1",
-    "ts-node": "^10.9.2"
+    "sitemap": "^7.1.1"
   },
   "scripts": {
     "start": "cross-env REACT_APP_REAL_MODE=local react-scripts start",
