--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "latest",
-    "@abstractplay/renderer": "latest",
+    "@abstractplay/gameslib": "^1.0.0-ci-7343208064.0",
+    "@abstractplay/renderer": "^1.0.0-ci-7349166330.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
@@ -27,6 +27,7 @@
     "plotly.js": "^2.27.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
