--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "plotly.js": "^2.27.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
