--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "latest",
+    "@abstractplay/gameslib": "file:../gameslib/abstractplay-gameslib-1.0.0-betad.tgz",
     "@abstractplay/renderer": "latest",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
