--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "nanoid": "^5.0.5",
     "plotly.js": "^2.27.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
