Better zooming going for live testing

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-time-ago": "7.2.1",
     "react-toastify": "^9.1.3",
     "react-use-storage-state": "^1.0.6",
+    "react-zoom-pan-pinch": "^3.4.4",
     "rehype-raw": "6.1.1",
     "web-vitals": "2.1.4"
   },
