--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "file:../gameslib/abstractplay-gameslib-1.0.0b-beta.tgz",
+    "@abstractplay/gameslib": "^1.0.0-ci-9332389652.0",
     "@abstractplay/renderer": "^1.0.0-ci-9009621064.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
