--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@abstractplay/gameslib": "^1.0.0-ci-9354138342.0",
-    "@abstractplay/renderer": "^1.0.0-ci-9423085504.0",
+    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-1.0.0c-beta.tgz",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
