--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "13.5.0",
     "aws-amplify": "5.3.12",
     "buffer": "6.0.3",
+    "bulma": "^1.0.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
@@ -41,6 +42,7 @@
     "react-use-storage-state": "^1.0.6",
     "react-zoom-pan-pinch": "^3.4.4",
     "rehype-raw": "6.1.1",
+    "sass": "^1.77.5",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
@@ -68,7 +70,8 @@
     "invalidate": "aws cloudfront create-invalidation --profile AbstractPlayDev --distribution-id E2FD1T2JUN28HB --paths /*",
     "invalidate-prod": "aws cloudfront create-invalidation --profile AbstractPlayProd --distribution-id EZ7B67NVBQ903 --paths /*",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "npm-login": "npm login --scope=@abstractplay --auth-type=legacy --registry=https://npm.pkg.github.com"
+    "npm-login": "npm login --scope=@abstractplay --auth-type=legacy --registry=https://npm.pkg.github.com",
+    "build-bulma": "sass --load-path=node_modules src/myBulma.scss src/myBulma.css"
   },
   "browserslist": {
     "production": [
