--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "^1.0.0-ci-9532710738.0",
-    "@abstractplay/renderer": "^1.0.0-ci-9009621064.0",
+    "@abstractplay/gameslib": "^1.0.0-ci-9588427984.0",
+    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-1.0.0b-beta.tgz",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
