Fix package.json after local testing

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@abstractplay/gameslib": "^1.0.0-ci-9588427984.0",
-    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-1.0.0b-beta.tgz",
+    "@abstractplay/renderer": "^1.0.0-ci-9589014967.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
