--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "^1.0.0-ci-10009305191.0",
+    "@abstractplay/gameslib": "^1.0.0-ci-10083297093.0",
     "@abstractplay/renderer": "^1.0.0-ci-9913345454.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-easy-sort": "^1.6.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
     "react-joyride": "^2.5.5",
@@ -41,6 +42,7 @@
     "react-use-storage-state": "^1.0.6",
     "react-zoom-pan-pinch": "^3.4.4",
     "rehype-raw": "6.1.1",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
