Is this what's causing the renderer CI fail?

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "^1.0.0-ci-10083297093.0",
-    "@abstractplay/renderer": "^1.0.0-ci-9913345454.0",
+    "@abstractplay/gameslib": "latest",
+    "@abstractplay/renderer": "latest",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
+    "apfront": "file:",
     "aws-amplify": "5.3.12",
     "buffer": "6.0.3",
     "i18next": "^21.10.0",
