--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -50,7 +50,8 @@ jobs:
       run: npm i
 
     - name: Install development renderer
-      run: npm install @abstractplay/renderer@development
+      run: npm remove @abstractplay/renerer
+    - run: npm install @abstractplay/renderer@development
 
     - name: install
       run: npm list @abstractplay/renderer
