--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -50,8 +50,7 @@ jobs:
       run: npm i
 
     - name: Install development renderer
-      run: npm remove @abstractplay/renderer
-    - run: npm install @abstractplay/renderer@development
+      run: npm remove @abstractplay/renderer && npm i @abstractplay/renderer@development
 
     - name: install
       run: npm list @abstractplay/renderer
