--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -49,11 +49,17 @@ jobs:
     - name: Install NPM dependencies
       run: npm i
 
+    - name: List renderer version
+      run: npm list @abstractplay/renderer
+
     - name: Install development renderer
       run: npm remove @abstractplay/renderer && npm i @abstractplay/renderer@development
 
-    - name: install
+    - name: List renderer version
       run: npm list @abstractplay/renderer
+
+    - name: gameslib version installed
+      run: npm list @abstractplay/gameslib
 
     - name: Install development gameslib
       run: npm remove @abstractplay/gameslib && npm i @abstractplay/gameslib@development
