Trying svgdotjs v3.2.4 again

--- a/.github/workflows/deploy-dev.js.yml
+++ b/.github/workflows/deploy-dev.js.yml
@@ -49,17 +49,11 @@ jobs:
     - name: Install NPM dependencies
       run: npm i
 
-    - name: List renderer version
-      run: npm list @abstractplay/renderer
-
     - name: Install development renderer
       run: npm remove @abstractplay/renderer && npm i @abstractplay/renderer@development
 
     - name: List renderer version
       run: npm list @abstractplay/renderer
-
-    - name: gameslib version installed
-      run: npm list @abstractplay/gameslib
 
     - name: Install development gameslib
       run: npm remove @abstractplay/gameslib && npm i @abstractplay/gameslib@development
@@ -69,6 +63,7 @@ jobs:
 
     - name: Svg.js version installed
       run: npm list @svgdotjs/svg.js
+    - run: ls node_modules | grep @svgdotjs
 
     - name: Set CI version
       run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
