--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@abstractplay/gameslib": "^1.0.0-ci-10512374118.0",
     "@abstractplay/renderer": "^1.0.0-ci-10433828958.0",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
@@ -43,6 +44,7 @@
     "react-zoom-pan-pinch": "^3.4.4",
     "rehype-raw": "6.1.1",
     "remark-gfm": "^3.0.1",
+    "tiny-invariant": "^1.3.3",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
