--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-easy-sort": "^1.6.0",
+    "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "12.2.0",
     "react-joyride": "^2.5.5",
